<resources>
    <string name="app_name">pokedex_clone</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="content">With the idea of imparting programming \n      knowledge, Mr. Sandeep Jain, an IIT Roorkee alumnus started a \n      dream, GeeksforGeeks. Whether programming excites you or you feel \n      stifled, wondering how to prepare for interview questions or how to\n      ace data structures and algorithms, GeeksforGeeks is a one-stop solution.\n      With every tick of time, we are adding arrows in our quiver. From articles \n      on various computer science subjects to programming problems for practice,\n      from basic to premium courses, from technologies to entrance examinations, \n      we have been building ample content with superior quality. In a short span, \n      we have built a community of 1 Million+ Geeks around the world, 20,000+ \n      Contributors and 500+ Campus Ambassadors in various colleges across the nation.\n      Our success stories include a lot of students who benefitted in their placements \n      and landed jobs at tech giants. Our vision is to build a gigantic network of \n      geeks and we are only a fraction of it yet.</string>
    <string name="pokedex">POKEDEX</string>
    <string name="pokemon_number">#%s</string>
    <string name="not_connected">⚠️ You aren’t connected to the internet</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="retry">Retry</string>
    <string name="base_stats">Base Stats</string>
    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="spd">SPD</string>
    <string name="exp">EXP</string>
    <string name="no_favourite_pokemon">No favourite pokemon!</string>
</resources>