<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.detail_screen.DetailFragment">

    <FrameLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_220sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/mauvelous"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView" />
    </FrameLayout>

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:padding="@dimen/_12sdp"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/grostesk"
        android:padding="@dimen/_12sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="#001" />

    <ImageView
        android:id="@+id/ivPokemon"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:src="@drawable/pokeball"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/grostesk"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        tools:text="@string/app_name" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/mauvelous"
        android:padding="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/retry"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup">

        <LinearLayout
            android:id="@+id/lnWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/lnHeight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvWeightValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tommy_light"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                tools:text="100.0 KG" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/grotesk_thin"
                android:text="@string/weight"
                android:textColor="@color/black_70"
                android:textSize="@dimen/_15ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/lnWeight"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvHeightValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tommy_light"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                tools:text="2.0 M" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/grotesk_thin"
                android:text="@string/height"
                android:textColor="@color/black_70"
                android:textSize="@dimen/_15ssp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvBaseStats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/grostesk"
            android:text="@string/base_stats"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lnWeight" />

        <TextView
            android:id="@+id/tvHp"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/grostesk"
            android:text="@string/hp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBaseStats" />

        <TextView
            android:id="@+id/tvValueHp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/grotesk_thin"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="@+id/tvHp"
            app:layout_constraintEnd_toStartOf="@id/progressHp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/tvHp"
            app:layout_constraintTop_toTopOf="@id/tvHp"
            tools:text="30" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressHp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="@+id/tvValueHp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/tvValueHp"
            app:layout_constraintTop_toTopOf="@id/tvValueHp"
            app:trackCornerRadius="@dimen/_12sdp"
            app:trackThickness="@dimen/_10sdp" />

        <TextView
            android:id="@+id/tvATK"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/grostesk"
            android:text="@string/atk"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHp" />

        <TextView
            android:id="@+id/tvValueATK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/grotesk_thin"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="@+id/tvATK"
            app:layout_constraintEnd_toStartOf="@id/progressATK"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/tvATK"
            app:layout_constraintTop_toTopOf="@id/tvATK"
            tools:text="1000/1000" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressATK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="@+id/tvValueATK"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/tvValueATK"
            app:layout_constraintTop_toTopOf="@id/tvValueATK"
            app:trackCornerRadius="@dimen/_12sdp"
            app:trackThickness="@dimen/_10sdp" />

        <TextView
            android:id="@+id/tvDEF"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/grostesk"
            android:text="@string/def"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvATK" />

        <TextView
            android:id="@+id/tvValueDEF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/grotesk_thin"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="@+id/tvDEF"
            app:layout_constraintEnd_toStartOf="@id/progressDEF"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/tvDEF"
            app:layout_constraintTop_toTopOf="@id/tvDEF"
            tools:text="30" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressDEF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="@+id/tvValueDEF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/tvValueDEF"
            app:layout_constraintTop_toTopOf="@id/tvValueDEF"
            app:trackCornerRadius="@dimen/_12sdp"
            app:trackThickness="@dimen/_10sdp" />

        <TextView
            android:id="@+id/tvSPD"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/grostesk"
            android:text="@string/spd"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDEF" />

        <TextView
            android:id="@+id/tvValueSPD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/grotesk_thin"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="@+id/tvSPD"
            app:layout_constraintEnd_toStartOf="@id/progressSPD"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/tvSPD"
            app:layout_constraintTop_toTopOf="@id/tvSPD"
            tools:text="30" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressSPD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="@+id/tvValueSPD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/tvValueSPD"
            app:layout_constraintTop_toTopOf="@id/tvValueSPD"
            app:trackCornerRadius="@dimen/_12sdp"
            app:trackThickness="@dimen/_10sdp" />

        <TextView
            android:id="@+id/tvEXP"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/grostesk"
            android:text="@string/exp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSPD" />

        <TextView
            android:id="@+id/tvValueEXP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/grotesk_thin"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="@+id/tvEXP"
            app:layout_constraintEnd_toStartOf="@id/progressEXP"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/tvEXP"
            app:layout_constraintTop_toTopOf="@id/tvEXP"
            tools:text="30" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressEXP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="@+id/tvValueEXP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/tvValueEXP"
            app:layout_constraintTop_toTopOf="@id/tvValueEXP"
            app:trackCornerRadius="@dimen/_12sdp"
            app:trackThickness="@dimen/_10sdp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>